Update settings and sample.env

--- a/.sample.env
+++ b/.sample.env
@@ -3,6 +3,6 @@ import os
 os.environ["DATABASE_URL"] = 
 os.environ["SECRET_KEY"] = 
 os.environ["CLOUDINARY_URL"] = 
-
-EMAIL_HOST_USER = 
-EMAIL_HOST_PASSWORD 
+os.environ["GMAIL_KEY"] = 
+os.environ["GMAIL_ACC"] = 
+os.envrion["EMAIL_HOST"] = 
