--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+annotated-types==0.5.0
 asgiref==3.7.2
 cloudinary==1.33.0
 coverage==7.2.7
@@ -11,6 +12,8 @@ django-summernote==0.8.20.0
 gunicorn==20.1.0
 oauthlib==3.2.2
 psycopg2==2.9.6
+pydantic==2.0.3
+pydantic_core==2.3.0
 PyJWT==2.7.0
 python3-openid==3.2.0
 pytz==2023.3
